fred fixed 11th training page transparent png bug on ie6, works fine on i ie6789

--- a/training/css/besupercharged/source/css/screen.css.sass
+++ b/training/css/besupercharged/source/css/screen.css.sass
@@ -49,21 +49,27 @@ ul
   position: relative
 
 header
+  behavior: url("/css/PIE.htc")
   background: url("/img/line-fade.png") no-repeat bottom
+  -pie-background: url("/img/line-fade.png") no-repeat bottom
   padding: 217px 0 80px
 
 #logo
+  behavior: url("/css/PIE.htc")
   @include bg_text( 880px, 146px, "logo")
   margin: 0 auto
 
 #sublogo
+  behavior: url("/css/PIE.htc")
   @include bg_text( 32px, 32px, "sublogo")
   position: absolute
   top: 64px
   right: 160px
 
 #desc
+  behavior: url("/css/PIE.htc")
   background: url("/img/summary-bg.png") no-repeat bottom
+  -pie-background: url("/img/summary-bg.png") no-repeat bottom
   font-size: 15px
   font-style: italic
   text-transform: capitalize
@@ -103,7 +109,7 @@ nav
   right: 116px
 
 #main-wrap
-  width: 879px
+  width: 889px
   padding: 45px 0 38px
   margin: 0 auto
 
@@ -204,6 +210,7 @@ nav
 
 footer
   +clearfix
+  behavior: url("/css/PIE.htc")
   background: url("/img/line.png") no-repeat center top
   padding: 2px 0 0
   font-size: 12px
@@ -242,7 +249,9 @@ footer
 
 #other-info
   +clearfix
+  behavior: url("/css/PIE.htc")
   background: url("/img/line-wide.png") no-repeat top
+  -pie-background: url("/img/line-wide.png") no-repeat top
   width: 1261px
   padding: 15px 0 13px
   margin: 0 auto
@@ -257,7 +266,9 @@ footer
 #sizes
   +float-right
   +clearfix
+  behavior: url("/css/PIE.htc")
   background: url("/img/screens.png") no-repeat left top
+  -pie-background: url("/img/screens.png") no-repeat left top
   color: #666
   font-size: 10px
   font-family: sans-serif
